# pyRDF2Vec

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  README.rst  docker-compose.yml  example.py  example_countries.py  pyproject.toml  requirements.txt  setup.py  test.py  test_samplers.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  documentation.md  feature.md  feature_request.md  question.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: main.yml  test.yml  workflow.yml
benchmarks/: am.tsv  benchmark-cache-depth.py  benchmark-cache-entities.py  benchmark-cache-max-walks.py  benchmark-cache.py  benchmark-packages.py  mutag.tsv
benchmarks/all/: entities.py  max-depth.py  max-walks.py
benchmarks/am/: am-50.tsv
benchmarks/cache/: benchmark-cache-entities.py  benchmark-cache-max-depth.py  benchmark-cache-max-walks.py  entities.py  max-depth.py  max-walks.py
benchmarks/dbpedia/: dbpedia-25.tsv  dbpedia-50.tsv
benchmarks/embedders/: max_depth.py  max_walks.py
benchmarks/multiprocessing/: benchmark-multiprocessing-entities.py  benchmark-multiprocessing-max-depth.py  benchmark-multiprocessing-max-walks.py  entities.py  max-depth.py  max-walks.py
benchmarks/mutag/: mutag-10.tsv  mutag-25.tsv
benchmarks/requests/: entities.py  max_depth.py  max_walks.py
benchmarks/res/: am.tsv  dbpedia.tsv  mutag.tsv
benchmarks/res/am/: am-10.tsv  am-25.tsv  test.tsv  train.tsv
benchmarks/res/dbpedia/: dbpedia-10.tsv  test.tsv  train.tsv
benchmarks/res/mutag/: mutag-50.tsv  test.tsv  train.tsv
benchmarks/sampling/: entities.py
benchmarks/slot/: benchmark-slot-entities.py  benchmark-slot-max-depth.py
benchmarks/walkers/: max_depth.py  max_walks.py
changelog.d/: README.rst  _template.rst
data/: aifb.n3
docs/: code_of_conduct.rst  conf.py  glossary.rst  index.rst  license.rst  modules.rst  posts-papers.rst  pyrdf2vec.graphs.rst  pyrdf2vec.rst  pyrdf2vec.samplers.rst  pyrdf2vec.walkers.rst  rdf2vec.rst  rdf2vec.walkers.rst  readme.rst  requirements.txt
docs/api/: pyrdf2vec.connectors.rst  pyrdf2vec.embedders.bert.rst  pyrdf2vec.embedders.doc2vec.rst  pyrdf2vec.embedders.embedder.rst  pyrdf2vec.embedders.fasttext.rst  pyrdf2vec.embedders.rst  pyrdf2vec.embedders.word2vec.rst  pyrdf2vec.graphs.kg.rst  pyrdf2vec.graphs.rdf_loader.rst  pyrdf2vec.graphs.remote_kg.rst  pyrdf2vec.graphs.rst  pyrdf2vec.graphs.sparql_loader.rst  pyrdf2vec.graphs.vertex.rst  pyrdf2vec.rdf2vec.rst  pyrdf2vec.rst  pyrdf2vec.samplers.frequency.rst  pyrdf2vec.samplers.pagerank.rst  pyrdf2vec.samplers.rst  pyrdf2vec.samplers.sampler.rst  pyrdf2vec.samplers.uniform.rst  pyrdf2vec.samplers.wide.rst  pyrdf2vec.typing.rst  pyrdf2vec.typings.rst  pyrdf2vec.utils.rst  pyrdf2vec.utils.typing.rst  pyrdf2vec.utils.validation.rst  pyrdf2vec.walkers.anonymous.rst  pyrdf2vec.walkers.community.rst  pyrdf2vec.walkers.halk.rst  pyrdf2vec.walkers.igraph.rst  pyrdf2vec.walkers.ngram.rst  pyrdf2vec.walkers.ngrams.rst  pyrdf2vec.walkers.random.rst  pyrdf2vec.walkers.rst  pyrdf2vec.walkers.split.rst  pyrdf2vec.walkers.walker.rst  pyrdf2vec.walkers.walklet.rst  pyrdf2vec.walkers.walklets.rst  pyrdf2vec.walkers.weisfeiler_lehman.rst
examples/: bert.py  countries.py  literals.py  mutag.py  mutag_hdt.py  mutag_igraph.py  online-learning.py  online-training-mutag.py  online-training.py  samplers.py
pyrdf2vec/: __init__.py  _rdf2vec.py  connectors.py  converters.py  graph.py  rdf2vec.py  typings.py
pyrdf2vec/embedders/: __init__.py  bert.py  doc2vec.py  embedder.py  fasttext.py  word2vec.py
pyrdf2vec/graphs/: __init__.py  kg.py  rdf_loader.py  remote_kg.py  sparql_loader.py  vertex.py
pyrdf2vec/samplers/: __init__.py  frequency.py  pagerank.py  sampler.py  uniform.py  wide.py
pyrdf2vec/utils/: validation.py
pyrdf2vec/walkers/: __init__.py  anonymous.py  community.py  halk.py  iGraphWalker.py  igraph.py  ngram.py  ngrams.py  random.py  split.py  walker.py  walklet.py  walklets.py  weisfeiler_lehman.py  wildcard.py
rdf2vec/: __init__.py  _rdf2vec.py  benchmark_experiment.py  citationnet_experiment.py  converters.py  create_embeddings.py  example.py  experiment.sh  graph.py  rdf2vec.py
rdf2vec/walkers/: __init__.py  anonymous.py  community.py  halk.py  ngrams.py  random.py  walker.py  walklets.py  weisfeiler_lehman.py  wildcard.py
rdflib_web/: caches.py.bak  generic_endpoint.py.bak  mimeutils.py.bak
rdflib_web/static/: lod.js
rdflib_web/templates/: class.html  lodbase.html  lodindex.html  lodpage.html  picked.html
samples/countries-cities/: countries.ttl  entities.tsv
samples/mutag/: mutag.hdt  mutag.hdt.index.v1-1  online-training.tsv  test.tsv  train.tsv
src/: .graph2vec2.py.swp  rdf2vec.py
tests/: test_connectors.py  test_converters.py  test_graph.py  test_rdf2vec.py  test_samplers.py  test_walkers.py  test_walkers_samplers.py
tests/embedders/: test_doc2vec.py  test_word2vec.py  word2vec.py
tests/rdflib_web/: __init__.py  bookdb.py  bookdb.py.bak  caches.py  endpoint.py  endpoint.py.bak  generic_endpoint.py  generic_endpoint.py.bak  htmlresults.py  htmlresults.py.bak  lod.py  lod.py.bak  mimeutils.py  mimeutils.py.bak
tests/rdflib_web/static/: lod.js  style.css
tests/rdflib_web/templates/: base.html  class.html  classes.html  index.html  instances.html  properties.html  property.html  results.html  search.html  utils.html
tests/samplers/: frequency.py  pagerank.py  sampler.py  test_frequency.py  test_pagerank.py  test_sampler.py  test_wide.py  uniform.py
tests/walkers/: test_anonymous.py  test_community.py  test_halk.py  test_ngram.py  test_ngrams.py  test_random.py  test_walker.py  test_walklet.py  test_walklets.py  test_weisfeiler_lehman.py  test_wildcard.py
