[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.poetry]
name = "pyrdf2vec"
version = "0.1.1"
description = "Python implementation and extension of RDF2Vec"
license = "Ghent University and IMEC vzw"
authors = [
    "Gilles Vandewiele <gilles.vandewiele@ugent.be>",
    "Bram Steenwinckel <bram.steenwinckel@ugent.be>",
    "Michael Weyns <michael.weyns@ugent.be>",
]
maintainers = ["Gilles Vandewiele <gilles.vandewiele@ugent.be>"]
readme = "README.rst"
repository = "https://github.com/IBCNServices/pyRDF2Vec"
documentation = "https://pyrdf2vec.readthedocs.io/en/latest/"
keywords = ["embeddings", "knowledge-graph", "rdf2vec", "word2vec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Build Tools"
]
include = [
    "LICENSE",
    "README.rst",
    "CONTRIBUTORS.rst",
    "CODE_OF_CONDUCT.rst",
]

[tool.poetry.dependencies]
SPARQLWrapper = "^1.8.5"
attrs = "^20.1.0"
flask = "^1.1.2"
gensim = "^3.8.3"
matplotlib = "^3.3.1"
mimeparse = "^0.1.3"
networkx = "^2.5"
numpy = "^1.19.1"
pandas = "^1.1.1"
python = "^3.6.1"
python-louvain = "^0.14"
rdflib = "^5.0.0"
scikit-learn = "^0.23.2"
tomlkit = "^0.7.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
codecov = "^2.1.9"
doc8 = "^0.8.1"
flake8 = "^3.8.3"
flask = "^1.1.2"
isort = "^5.4.2"
mimeparse = "^0.1.3"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-apidoc = "^0.3.0"
towncrier = "^19.2.0"
tox = "^3.19.0"
yamllint = "^1.24.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "sphinxcontrib-apidoc"]
lint = ["black", "doc8", "flake8", "isort", "mypy", "yamllint"]
tests = ["codecov", "pytest", "pytest-cov"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/IBCNServices/pyRDF2Vec/issues"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | _build
  | build
  | dist
  | env
)/
'''

[tool.towncrier]
package = "pyrdf2vec"
filename = "CHANGELOG.rst"
template = "changelog.d/_template.rst"
issue_format = "`#{issue} <https://github.com/IBCNServices/pyRDF2Vec/issues/{issue}>`_"
directory = "changelog.d"
title_format = "{version} ({project_date})"
underlines = ["-", "^"]

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Improved Documentation"
    showcontent = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    docs
    py{36,37,38}
    lint
    tests
isolated_build = True

[testenv:changelog]
description = Displays the news fragments of the CHANGELOG file
deps = towncrier
skip_install = true
commands = towncrier --draft

[testenv:docs]
description = Builds documentation (HTML) with Sphinx.
deps =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    sphinxcontrib-apidoc
    tomlkit
commands =
    sphinx-build -n -T -W docs docs/_build/html
    python -m doctest README.rst

[testenv:lint]
description = Checks the code style.
deps = pre-commit
skip_install = true
commands = pre-commit run --all-files

[testenv:tests]
description = Runs unit tests and performs coverage.
deps =
    codecov
    pytest
    pytest-cov
commands = pytest --cov=pyrdf2vec tests
"""
